--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@vercel/postgres": "^0.8.0"
+    "tailwindcss": "^3.4.13",
+"postcss": "^8.4.47",
+"autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
