--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@vercel/postgres": "^0.8.0"
-    "tailwindcss": "^3.4.13",
-"postcss": "^8.4.47",
-"autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
@@ -23,6 +20,9 @@
     "@types/react": "^18.2.44",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5"
+    "eslint-config-next": "^14.2.5",
+    "tailwindcss": "^3.4.13",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   }
 }
