--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@vercel/postgres": "^0.8.0"
+    "@vercel/postgres": "^0.8.0",
     "googleapis": "^131.0.0"
   },
   "devDependencies": {
