--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@vercel/postgres": "^0.8.0",
-    "googleapis": "^131.0.0"
+    "googleapis": "^131.0.0",
+    "raw-body": "^2.5.2"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
